[package]
name = "readability-demo"
version = "0.1.0"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]

[dependencies]
readability      = "^0"
iron             = "0.5.1"
router           = "0.5.1"
mount            = "0.3.0"
staticfile       = "0.4.0"
urlencoded       = "^0"
serde            = "^1"
serde_json       = "^1"
serde_derive     = "^1"

